<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivHeadshot"
        android:layout_width="308dp"
        android:layout_height="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageViewAlt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/me"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnEmailMe"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/btnEmailMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWorkHistory"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCallMe"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/btnCallMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEducation"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnWorkHistory"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/btnWorkHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeadshot"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnEducation"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/btnEducation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeadshot"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>